blog/post_detail.html 템플릿에 구글맵 추가 blog/layout.html 템플릿에 jqury cdn 추가

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,8 +10,32 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .post-map {
+        width: 300px;
+        height: 300px;
+  }
 
 </style>
+
+<script>
+$(function(){
+    var myLatLng = {lat: -25.363, lng: 231.044};
+    var container = $('.post-map')[0];
+    var map = new google.maps.Map(container, {
+      zoom: 4,
+      center: myLatLng
+    });
+
+    var marker = new google.maps.Marker({
+      position: myLatLng,
+      map: map,
+      title: 'Hello World!'
+    });
+});
+</script>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+
+
 {% endblock %}
 
 {% block content %}
@@ -26,6 +50,7 @@
             <img src="{{ post.photo.url }}" class="post_photo">
           {% endif %}
           <hr>
+          <div class="post-map"></div>
           {{ post.content|linebreaks }}
         </div>
         <div class="panel-footer">
