프로젝트 단위 템플릿 구현

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,5 +1,8 @@
+{% extends "accounts/layout.html" %}
+{% block content %}
 <h1>{{ user }}'s Profile</h1>
 <table>
 	<tr><th>username</th><td>{{ user.username }}</td></tr>
 	<tr><th>datejoind</th><td>{{ user.date_joined }}</td></tr>
 </table>
+{% endblock %}
