--- a/accounts/templates/accounts/login_form.html
+++ b/accounts/templates/accounts/login_form.html
@@ -1,7 +1,10 @@
-<form action="" method="post">
-	{% csrf_token %}
-	<table>
-		{{ form.as_table }}
-	</table>
-	<input type="submit" value="로그인">
-</form>
+{% extends "accounts/layout.html" %}
+{% block content %}
+	<form action="" method="post">
+		{% csrf_token %}
+		<table>
+			{{ form.as_table }}
+		</table>
+		<input type="submit" value="로그인">
+	</form>
+{% endblock %}
