--- a/accounts/templates/accounts/signup_form.html
+++ b/accounts/templates/accounts/signup_form.html
@@ -1,3 +1,5 @@
+{% extends "accounts/layout.html" %}
+{% block content %}
 <form action="" method="post">
 	{% csrf_token %}
 	<table>
@@ -5,3 +7,4 @@
 	</table>
 	<input type="submit" value="로그인">
 </form>
+{% endblock %}
