--- a/accounts/templates/accounts/signup_form.html
+++ b/accounts/templates/accounts/signup_form.html
@@ -5,6 +5,6 @@
 	<table>
 		{{ form.as_table }}
 	</table>
-	<input type="submit" value="로그인">
+	<input type="submit" value="회원가입">
 </form>
 {% endblock %}
